--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -9,8 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shimmer: ^3.0.0
-  skeletonizer: ^1.4.3
+  shimmer:
+    ^3.0.0
+  skeletonizer:
+    ^1.4.3
+  provider:
+    ^6.1.1
 
 dev_dependencies:
   flutter_test:
