--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -22,4 +22,9 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-  uses-material-design: true
+assets:
+    - assets/images/male_icon.png
+    - assets/images/female_icon.png
+
+
+uses-material-design: true
