--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -1,6 +1,6 @@
 name: amparo_coletivo
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,12 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shimmer:
-    ^3.0.0
-  skeletonizer:
-    ^1.4.3
-  provider:
-    ^6.1.1
+  shimmer: ^3.0.0
+  skeletonizer: ^1.4.3
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -22,9 +19,4 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-assets:
-    - assets/images/male_icon.png
-    - assets/images/female_icon.png
-
-
-uses-material-design: true
+  uses-material-design: true
