--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   shimmer: ^3.0.0
   skeletonizer: ^1.4.3
-  provider: ^6.1.1
   supabase_flutter: ^1.0.0
+  flutter_riverpod: ^2.0.0
 
 dev_dependencies:
   flutter_test:
