--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   skeletonizer: ^1.4.3
   supabase_flutter: ^1.0.0
   flutter_riverpod: ^2.0.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
