--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -4,17 +4,14 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
-  flutter: ">=3.31.0"
+  sdk: ^3.7.0
 
 dependencies:
   flutter:
     sdk: flutter
   shimmer: ^3.0.0
-  skeletonizer: ^2.0.1
-  supabase_flutter: ^1.0.0
-  flutter_riverpod: ^2.0.0
   provider: ^6.1.1
+  supabase_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
