--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -1,22 +1,24 @@
 name: amparo_coletivo
-description: "A new Flutter project."
+description: A new Flutter project.
 publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.7.0
+  sdk: ">=3.3.0 <4.0.0"
+  flutter: ">=3.31.0"
 
 dependencies:
   flutter:
     sdk: flutter
   shimmer: ^3.0.0
   provider: ^6.1.1
-  supabase_flutter: ^1.0.0
+  supabase_flutter: ^2.9.0
+  skeletonizer: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
