--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   provider: ^6.1.1
   supabase_flutter: ^2.9.0
   skeletonizer: ^2.0.1
+  logger: ^2.0.2
 
 dev_dependencies:
   flutter_test:
