--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -14,7 +14,11 @@ dependencies:
   provider: ^6.1.1
   supabase_flutter: ^2.9.0
   skeletonizer: ^2.0.1
+  flutter_riverpod: ^2.0.0
   logger: ^2.0.2
+  carousel_slider: ^5.1.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -25,3 +29,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
