Adicionados recursos de zoom de imagem, código QR e biografia de perfil
Esta atualização introduz o zoom de imagem com o PhotoView nas páginas de ONGs, substitui imagens estáticas de QR Code do Pix pela geração dinâmica de QR Code e adiciona biografia/descrição editável do usuário na página de perfil. As categorias agora exibem imagens, e a página "Sobre a ONG" pode ser acessada a partir da gaveta. Também inclui a refatoração do local da página de recuperação de senha, remove campos de URL de QR Code do Pix não utilizados e atualiza as dependências em pubspec.yaml para novos recursos.

--- a/Code/amparo_coletivo/android/local.properties
+++ b/Code/amparo_coletivo/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\MIGUELGABRIEL\\AppData\\Local\\Android\\sdk
-flutter.sdk=D:\\dev\\flutter
+sdk.dir=C:\\Users\\bruno\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
