--- a/Code/amparo_coletivo/pubspec.yaml
+++ b/Code/amparo_coletivo/pubspec.yaml
@@ -5,78 +5,44 @@ version: 0.1.0
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
-  flutter: ">=3.32.4"
+  flutter: ">=3.31.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  shimmer: ^3.0.0
+
+  # Estado, injeção de dependência e gerenciamento de tema
   provider: ^6.1.1
-  supabase_flutter: ^2.9.1
-  skeletonizer: ^2.0.1
   flutter_riverpod: ^2.0.0
-  logger: ^2.0.2
+
+  # Supabase
+  supabase_flutter: ^2.9.1
+
+  # Efeitos visuais
+  shimmer: ^3.0.0
+  skeletonizer: ^2.0.1
   carousel_slider: ^5.1.1
+  photo_view: ^0.15.0
   url_launcher: ^6.3.1
 
+  # Logs
+  logger: ^2.0.2
 
+  # Pacotes para geração e manipulação de QR Code
+  qr_flutter: ^4.1.0 # Geração de QR Code visual
+  image: ^4.1.3 # Manipulação de imagem para salvar como PNG
+  path_provider: ^2.1.1 # Para pegar diretórios temporários, etc.
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
+
   assets:
     - assets/images/
 
-  fonts:
-    - family: Nunito
-      fonts:
-        - asset: assets/fonts/Nunito/Nunito-Regular.ttf
-    - family: NunitoBold
-      fonts:
-        - asset: assets/fonts/Nunito/Nunito-Bold.ttf
-    - family: NunitoLight
-      fonts:
-        - asset: assets/fonts/Nunito/Nunito-Light.ttf
-    - family: NunitoSemiBold
-      fonts:
-        - asset: assets/fonts/Nunito/Nunito-SemiBold.ttf
-    - family: NunitoExtraBold
-      fonts:
-        - asset: assets/fonts/Nunito/Nunito-ExtraBold.ttf
-    - family: Arimo
-      fonts:
-        - asset: assets/fonts/Arimo/Arimo-Regular.ttf
-    - family: ArimoBold
-      fonts:
-        - asset: assets/fonts/Arimo/Arimo-Bold.ttf
-    - family: ArimoLight
-      fonts:
-        - asset: assets/fonts/Arimo/Arimo-Light.ttf
-    - family: ArimoSemiBold
-      fonts:
-        - asset: assets/fonts/Arimo/Arimo-SemiBold.ttf
-    - family: ArimoExtraBold
-      fonts:
-        - asset: assets/fonts/Arimo/Arimo-ExtraBold.ttf
-    - family: ArimoBlack
-      fonts:
-        - asset: assets/fonts/Arimo/Arimo-Black.ttf
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto/Roboto-Regular.ttf
-    - family: RobotoBold
-      fonts:
-        - asset: assets/fonts/Roboto/Roboto-Bold.ttf
-    - family: RobotoLight
-      fonts:
-        - asset: assets/fonts/Roboto/Roboto-Light.ttf
-    - family: RobotoMedium
-      fonts:
-        - asset: assets/fonts/Roboto/Roboto-Medium.ttf
-    - family: RobotoThin
-      fonts:
-        - asset: assets/fonts/Roboto/Roboto-Thin.ttf
+  # fonts:
+  #   (Você pode ativar essas fontes se estiver usando)
